# deploy_model_inference

./: Dockerfile  README.md  pyproject.toml
models/: scaler.pkl  trained_model_2025-01-11.joblib
src/data/: data_preprocessor.py
src/model/: inference.py  model_loader.py
