[project]
name = "deploy-model-inference"
version = "0.1.0"
description = "\"Pipeline de inferencia del modelo de prediccion de diabetes\""
authors = [
    {name = "arafernandez",email = "arasolfer8@gmail.com"}
]
license = {text = "\"APACHE 2.0\""}
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "xgboost (>=2.1.3,<3.0.0)",
    "joblib (>=1.4.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
